Make header and footer sticky

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -21,9 +21,16 @@
 
 .masthead {
   background-color: #30574E;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
+
   
   &__inner-wrap {
     background-color: #30574E;
+    padding: 0.5em; // Reduce padding
   }
 
   .site-nav {
@@ -50,7 +57,30 @@
   }
 }
 
+#main {
+  padding-top: 40px; // Reduce top padding to match smaller header
+}
+
 .page__footer {
   background-color: #30574E;
   color: #fff;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  margin: 0;
+  width: 100%;
+  z-index: 1000;
+  padding: 0.3em 0; // Further reduce padding
+  
+  .page__footer-follow,
+  .page__footer-copyright {
+    font-size: 0.8em;
+    line-height: 1;
+    padding: 0;
+    margin: 0;
+  }
+}
+
+.page {
+  padding-bottom: 2em; // Reduce bottom padding to match smaller footer
 }
